# DominatingSetHeuristics

./: CMakeLists.txt  README.md  main.cpp
include/: Algorithms.h  Edge.h  Graph.h  Neighborhood.h  TabuList.h  Types.h  VertexSet.h
src/: Algorithms.cpp  Graph.cpp  Neighborhood.cpp  TabuList.cpp  VertexSet.cpp
topologies/circle/: 5-nodes.txt
